--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 }
 
 test {
@@ -28,14 +29,14 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("quip.Quip")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "quip"
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
 }
