Prepare gradle configuration for release

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ application {
 }
 
 shadowJar {
+    manifest {
+        attributes 'Main-Class': 'quip.Launcher'
+    }
     archiveBaseName = "quip"
     archiveClassifier = null
 }
